Notebook and script

--- a/generate_factsheet_results.ipynb
+++ b/generate_factsheet_results.ipynb
@@ -16,7 +16,7 @@
     "# Path of the CSV file which contains the label and image name\n",
     "CSV_PATH = \"./data.csv\"\n",
     "\n",
-    "# Tru if CSV is tab separated otherwise false\n",
+    "# True if CSV is tab separated otherwise false\n",
     "CSV_WITH_TAB = False\n",
     "\n",
     "# Path of the directory where images to be used in this experiement are saved\n",
