Factsheets generator: overall auc and desc auc plots added........ pdf report: overall auc and categories added in summary

--- a/generate_factsheet_results.ipynb
+++ b/generate_factsheet_results.ipynb
@@ -1186,6 +1186,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Generate overall histogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_range(dictionary, begin, end):\n",
+    "    return dict(e for i, e in enumerate(dictionary.items()) if begin <= i <= end)\n",
+    "\n",
+    "\n",
+    "def generate_overall_auc_histogram_and_desc_auc_plot():\n",
+    "    \n",
+    "    #Read super_Categories\n",
+    "    super_categories_textfile_path = os.path.join(PREDICTIONS_PATH, 'super_categories.txt') \n",
+    "    with open(super_categories_textfile_path, 'r') as f:\n",
+    "        super_categories = f.read().splitlines()\n",
+    "        \n",
+    "    #Read Categories AUC    \n",
+    "    categories_dic = {}\n",
+    "    for sup_cat in super_categories:\n",
+    "        categories_auc_textfile_path = os.path.join(PREDICTIONS_PATH, sup_cat, 'categories_auc.txt') \n",
+    "        with open(categories_auc_textfile_path, 'r') as f:\n",
+    "            categories_auc = f.read().splitlines()\n",
+    "        for item in categories_auc:\n",
+    "            arr_split = item.split(' : ')\n",
+    "            categories_dic[arr_split[0]] = float(arr_split[1])\n",
+    "            \n",
+    "    #Sort in descending order        \n",
+    "    sorted_categories_dic = dict(sorted(categories_dic.items(), key=lambda x: x[1], reverse=True))\n",
+    "    \n",
+    "    \n",
+    "    print(\"##########################################\")\n",
+    "    print(\"Saving Overall AUC Histogram\")\n",
+    "    print(\"##########################################\")\n",
+    "    print()\n",
+    "    print()\n",
+    "    \n",
+    "    #plot histogram\n",
+    "    fig = plt.figure(figsize=(15,8))\n",
+    "    plt.title('All CategoriesAUC Histogram', fontsize=20)\n",
+    "    plt.xlabel('AUC Score', fontsize=16)\n",
+    "    plt.ylabel('Frequency', fontsize=16)\n",
+    "    plt.hist(list(sorted_categories_dic.values()), alpha=0.5, ec='black')\n",
+    "    plt.show()\n",
+    "    overall_categoris_auc_histogram_path = os.path.join(PREDICTIONS_PATH, \"overall_auc_histogram.png\")\n",
+    "    fig.savefig(overall_categoris_auc_histogram_path, dpi=fig.dpi)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    print(\"##########################################\")\n",
+    "    print(\"Saving Desc AUC Plot\")\n",
+    "    print(\"##########################################\")\n",
+    "    print()\n",
+    "    print()\n",
+    "    \n",
+    "    total_cat = len(sorted_categories_dic)\n",
+    "    cat_per_plot = 30\n",
+    "    plots_needed = math.ceil(len(sorted_categories_dic)/cat_per_plot)\n",
+    "\n",
+    "    print(\"Total Categories : \", total_cat)\n",
+    "    print(\"Plots Needed : \", plots_needed)\n",
+    "    print(\"Categories per plot : \", cat_per_plot)\n",
+    "    \n",
+    "    fig, axs = plt.subplots(plots_needed,1, figsize=(20, plots_needed*cat_per_plot))\n",
+    "    fig.subplots_adjust(hspace = .1, wspace=.001)\n",
+    "    axs = axs.ravel()\n",
+    "\n",
+    "    for i in range(plots_needed):\n",
+    "        begin = i*cat_per_plot\n",
+    "        end = (i*cat_per_plot+cat_per_plot-1) if (i*cat_per_plot+cat_per_plot-1) < total_cat else total_cat \n",
+    "        slice_i = get_range(sorted_categories_dic, begin, end)\n",
+    "\n",
+    "        axs[i].barh(list(slice_i.keys()), list(slice_i.values()))\n",
+    "        axs[i].set_title(\"All Categories AUC - Slice \"+ str(i+1), fontsize=20)\n",
+    "        axs[i].xaxis.set_tick_params(rotation=90)\n",
+    "        axs[i].set_xlabel(\"AUC Score\")\n",
+    "        axs[i].set_ylabel(\"Category\")\n",
+    "        axs[i].invert_yaxis()\n",
+    "        ymin,ymax=axs[i].get_ylim()\n",
+    "        axs[i].vlines(0.5, ymin=ymin, ymax=ymax, linestyles =\"--\", colors =\"r\")\n",
+    "\n",
+    "\n",
+    "    descending_categoris_auc_path = os.path.join(PREDICTIONS_PATH, \"descending_auc.png\")\n",
+    "    fig.savefig(descending_categoris_auc_path, dpi=fig.dpi)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Magic Happens here"
    ]
   },
@@ -1318,7 +1414,11 @@
     "for index, singlee_super_data in enumerate(super_data):\n",
     "    if MAX_EPISODES is None or index < MAX_EPISODES:\n",
     "        super_results[singlee_super_data['super_category']] = train_single_super_category(singlee_super_data)\n",
-    "        break"
+    "\n",
+    "\n",
+    "\n",
+    "#generate over all hostogram and auc desc plot\n",
+    "generate_overall_auc_histogram_and_desc_auc_plot()"
    ]
   },
   {
